--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -60,7 +60,7 @@ hr.star-light {
     padding: 0;
     border: none;
     border-top: 1px solid #e0e0e0;
-    box-shadow: 0px 0px 1px #b2b2b2;
+    box-shadow: 0px 0px 1px #e0e0e0;
 
     text-align: center;
     max-width: 350px;
@@ -75,7 +75,7 @@ hr.star-light:after {
     padding: 0 0.125em;
 
     background-color: transparent;
-    color: #b2b2b2;
+    color: #fcfcfc;
 }
 
 hr.star-primary {
@@ -114,11 +114,12 @@ header .intro-text .bio {
     line-height: 1.5em;
     font-family: "Merriweather", serif;
     text-align: left;
+    padding: 0 5px;
 }
 
 .quote {
     font-style: italic;
-    line-height: 2em;
+    line-height: 1.5em;
     border-left: 3px solid grey;
     padding-left: 10px;
 }
@@ -251,8 +252,9 @@ section.success {
 }
 
 .portfolio h2 {
-    padding-top: 30px;
+    padding-top: 0px;
     font-family: "Voces", serif;
+    font-size: 1.5em;
 }
 
 .portfolio .item-wrapper {
@@ -806,6 +808,11 @@ article figcaption {
 
     .navbar-custom.affix .navbar-nav li a {
         font-size: 105%;
+    }
+
+    .portfolio h2 {
+    padding-top: 20px;
+    font-size: 2em;
     }
 }
 
