--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -550,6 +550,7 @@ article h4 {
     padding-bottom: 0;
     margin-bottom: 0.5em;
     margin-top: 1em;
+    font-style: italic;
 }
 
 article h5 {
@@ -561,6 +562,28 @@ article h5 {
     padding-bottom: 0;
     margin-bottom: 0.5em;
     margin-top: 1em;
+}
+
+article .rounded-link {
+    width: 100%;
+    font-size: 1.25em;
+    line-height: 1.5em;
+    font-family: "Voces", serif;
+    border: 1px solid #dbdbdb;
+
+    border-radius: 10px;
+
+    padding-left: 20px;
+    padding-right: 10px;
+
+    padding-top: 15px;
+    padding-bottom: 15px;
+    transition: border-color ease 0.3s;
+}
+
+article .rounded-link:hover{
+    cursor: pointer;
+    border-color: #3dbee2;
 }
 
 article .table {
@@ -588,7 +611,7 @@ article table .fa {
 
 article p {
     font-size: 1.1em;
-    line-height: 1.5em;
+    line-height: 1.6em;
     font-family: "Merriweather", serif;
     text-align: left;
     margin-top: 0;
@@ -618,6 +641,13 @@ article ul li, article ol li {
     font-family: "Merriweather", serif;
     text-align: left;
     padding-bottom: 0.5em;
+}
+
+article ul li ul li, article ol li ol li {
+    font-size: 1em;
+    line-height: 1.2em;
+    padding-top: 0.2em;
+    padding-bottom: 0;
 }
 
 
