--- a/articles/template/index.html
+++ b/articles/template/index.html
@@ -2,11 +2,23 @@
 <html>
 
 <head>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113144653-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-113144653-1');
+    </script>
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="keywords" content="Yidi Zhu, Yidi, Hero's Journey">
+    <meta name="description" content="An essay analyzing the hero's journey in the movie Almost Famous.">
+    <meta name="author" content="Yidi Zhu">
+    
     <title>Yidi | </title>
 
     <!-- Bootstrap Core CSS -->
