--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -579,6 +579,8 @@ article .rounded-link {
     padding-top: 15px;
     padding-bottom: 15px;
     transition: border-color ease 0.3s;
+
+    margin-bottom: 15px;
 }
 
 article .rounded-link:hover{
