--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -768,6 +768,7 @@ article figcaption {
 #blog .post-card .post-intro {
     font-family: "Hind", sans-serif;
     font-size: 1.1em;
+    color: #606060;
 }
 
 #blog a {
