--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -528,7 +528,8 @@ article h1, article h2 {
     font-size: 3em;
     font-weight: 500;
     text-align: center;
-    margin-bottom: 20px;
+    margin-top: 75px;
+    margin-bottom: 50px;
 }
 
 article h3 {
