--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -692,6 +692,7 @@ article figcaption {
     padding-bottom: 56.25%; /* 16:9 */
     padding-top: 25px;
     height: 0;
+    margin-bottom: 1.5em;
 }
 
 .video-wrapper iframe {
