small css changes to font size and line height

--- a/css/article.css
+++ b/css/article.css
@@ -13,7 +13,7 @@ article {
 }
 
 p {
-    font-size: 120%;
+    font-size: 1.2em;
     margin: 20px 0;
     font-family: 'Merriweather', serif;
     font-weight: 300;
